--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "react-slick": "^0.29.0",
     "sass": "^1.62.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.3",
     "yup": "^1.2.0"
   },
