--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
