--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-accordion": "^1.2.1",
     "firebase": "^9.23.0",
+    "framer-motion": "^10.12.21",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
