--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-accordion": "^1.2.1",
+    "dayjs": "^1.11.9",
     "firebase": "^9.23.0",
     "framer-motion": "^10.12.21",
     "lodash": "^4.17.21",
