--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dayjs": "^1.11.9",
     "firebase": "^9.23.0",
     "framer-motion": "^10.12.21",
+    "i18next": "^23.2.11",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
@@ -23,6 +26,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.9.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.7",
