fixed:.env file

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VITE_APP_API_KEY=AIzaSyANupwn9blin8bpLoCwLmGxRjTeIAqz4Vs
-VITE_APP_AUTH_DOMAIN=fir-1-f62aa.firebaseapp.com
-VITE_APP_PROJECT_ID=fir-1-f62aa
-VITE_APP_STORAGE_BUCKET=fir-1-f62aa.appspot.com
-VITE_APP_MESSAGING_SENDER_ID=648867939574
-VITE_APP_APP_ID=1:648867939574:web:d3eb21cb440a940d7158d7
-VITE_APP_DATABASE_URL=https://fir-1-f62aa-default-rtdb.europe-west1.firebasedatabase.app/
+# VITE_APP_API_KEY=AIzaSyANupwn9blin8bpLoCwLmGxRjTeIAqz4Vs
+# VITE_APP_AUTH_DOMAIN=fir-1-f62aa.firebaseapp.com
+# VITE_APP_PROJECT_ID=fir-1-f62aa
+# VITE_APP_STORAGE_BUCKET=fir-1-f62aa.appspot.com
+# VITE_APP_MESSAGING_SENDER_ID=648867939574
+# VITE_APP_APP_ID=1:648867939574:web:d3eb21cb440a940d7158d7
+# VITE_APP_DATABASE_URL=https://fir-1-f62aa-default-rtdb.europe-west1.firebasedatabase.app/
